src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageAMDCallback_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageAMDCallback_StringErrorContext.class */
public final class GLDebugMessageAMDCallback_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("create(J)Lorg/lwjgl/opengl/GLDebugMessageAMDCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageAMDCallbackErrorContext");
        methods.put("createSafe(J)Lorg/lwjgl/opengl/GLDebugMessageAMDCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageAMDCallbackErrorContext");
        methods.put("create(Lorg/lwjgl/opengl/GLDebugMessageAMDCallbackI;)Lorg/lwjgl/opengl/GLDebugMessageAMDCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageAMDCallbackErrorContext");
        methods.put("getMessage(IJ)Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageAMDCallbackErrorContext");
        return methods;
    }
}
